# linglong-loader

./: CMakeLists.txt  README.md  README.zh_CN.md
.reuse/: dep5
debian/: changelog  control  copyright  linglong-loader.lintian-overrides  rules
scripts/: code_coverage.sh
src/: CMakeLists.txt  elf.cpp  erofs.cpp  main.cpp  squashfs.cpp  uaploader.cpp
tests/: CMakeLists.txt  demo_test.cpp
tests/data/: org.deepin.demo_1.2.1_x86_64.uab
